# ICT2024_surveillance_balancing_robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/lib/controller/: controller_main
install/controller/share/ament_index/resource_index/parent_prefix_path/: controller
install/controller/share/controller/: dubal_no_eye.py  local_setup.sh  package.sh  package.xml
install/dubal_eye_AND_web/share/dubal_eye_AND_web/: package.sh
install/odrive_controller/lib/odrive_controller/: odrive_controller  odrive_controller_node
install/odrive_controller/share/odrive_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/serial_reciver/lib/serial_reciver/: reciver_cheak_node  serial_reciver_node
install/serial_reciver/share/serial_reciver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/Serial_receiver/: imu_receiver.py
src/controller/: CMakeLists.txt
src/controller/include/: .controller_main.h.swp  \  controller_main.h  controller_main_function.h
src/controller/launch/: dubal_no_eye.py
src/controller/src/: .controller_main.cpp.swp  controller_main.cpp
src/odrive_controller/: setup.cfg  setup.py
src/odrive_controller/odrive_controller/: odrive_controller.py
src/sbus_arduino/: SBUS.h  SBUS.ino
src/serial_reciver/: package.xml  setup.cfg  setup.py
src/serial_reciver/serial_reciver/: .serial_reciver_node.py.swp  SerialHandler.py  imu_receiver.py  reciver_cheak.py  serial_reciver_node.py  teensy_receiver.py
